fix overflow

--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body * {
   margin: 0;
 }
 
+a{
+  text-decoration: none;
+  color: #000000;
+}
+
 ul {
   list-style: none;
 }
@@ -473,6 +478,7 @@ ul {
   width:100%;
   height: 250px;
   background-color: #327F09;
+  overflow: hidden;
 }
 .link_group_1{
   position: absolute;
@@ -519,7 +525,7 @@ ul {
 .link_group_2{
   position: absolute;
   top: 25%;
-  left: 65%;
+  left: 70%;
   right: 20%;
   width: 300px;
   display: flex;
@@ -723,8 +729,8 @@ footer small {
 }
 
 .header-menu li{
-    margin-left: 5vw;
-    font-size: 1.3vw;
+    margin-left: 2.4rem;
+    font-size: 1.6rem;
 }
 
 #hamburger {
